--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "clsx": "^2.1.0",
+    "formik": "^2.4.5",
+    "google-libphonenumber": "^3.2.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
