--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "google-libphonenumber": "^3.2.34",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
     "yup": "^1.4.0"
