--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-with-react",
+  "name": "frontend-using-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
